--- a/views/secret.njk
+++ b/views/secret.njk
@@ -1,3 +1,19 @@
 {% extends layout %}
 {% block content %}
+<div>
+                <ul class="list-group">
+                    {% for item in items %}
+                        <li class="list-group-item d-flex justify-content-between">
+                            <div class="d-flex">
+                                <div class="form-check me-3">
+                                    </div>
+                                    {{ item.name }}
+                                    {{ item.password }}
+                                    {{ item.last_login }}
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
             {% endblock %}
+            
