signup, edit, user kopplad till meeps

--- a/views/secret.njk
+++ b/views/secret.njk
@@ -1,19 +1,33 @@
 {% extends layout %}
 {% block content %}
-<div>
-                <ul class="list-group">
-                    {% for item in items %}
-                        <li class="list-group-item d-flex justify-content-between">
-                            <div class="d-flex">
-                                <div class="form-check me-3">
-                                    </div>
-                                    {{ item.name }}
-                                    {{ item.password }}
-                                    {{ item.last_login }}
-                                </div>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            {% endblock %}
+<div class="container">
+  <div class="cards d-flex flex-wrap justify-content-center">
+  <div class="card" style="width: 42rem;">
+    <div class="card-body">
+      <form action="/secret/" method="POST">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Meep® something</label>
+          <input type="text" class="form-control" id="body" name="body" placeholder="Meep..." autocomplete="off">
+          <label for="exampleFormControlInput1" class="form-label" id="char-count"></label>
+        </div>
+        <input type="submit" class="btn btn-primary mb-3" value="Post">
+      </form>
+    </div>
+  </div> 
+  {% for item in items %}
+  <div class="card" style="width: 42rem;">
+    <div class="card-body">
+      <h5 class="card-title">{{item.name}}</h5>
+      <h6 class="card-subtitle mb-2 text-muted">{{item.updated_at}}</h6>
+      <p class="card-text">{{item.body}}</p>
+      <div class="d-flex">
+      <a href="/secret/{{item.id}}" class="btn btn-primary mr-auto">Edit</a>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+  </div>
+    
+</div>
+{% endblock %}
             
